--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <div class="observer_date"></div>
     </div>
 
+    <div id="back-top" title="Наверх"></div>
+
     <script src="js/main.js"></script>
     <script src="js/observer.js"></script>
 </body>
