move description-block from js to html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <p>
             <button id="refresh_btn">Новый поиск</button>
         </p>
-        <div id="description"></div>
+        <div id="description">
+            На странице пользователя <strong id="_username"></strong> <span id="countPubAll"></span> публикаций.
+            <br>Ищем все <span id="mountRusPrilog"></span> публикации.
+            <br>Найдено <span id="_countPub"></span> публикаций.
+        </div>
         <div id="waitingBox"></div>
         <div id="mainBox"></div>
 
