little change in index.html

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </p>
         <div id="description">
             На странице пользователя <strong id="_username"></strong> <span id="countPubAll"></span> публикаций.
-            <br>Ищем все <span id="mountRusPrilog"></span> публикации.
-            <br>Найдено <span id="_countPub"></span> публикаций.
+            <br>Ищем все <strong id="mountRusPrilog"></strong> публикации.
+            <br>Найдено публикаций: <strong id="_countPub"></strong>.
         </div>
         <div id="waitingBox"></div>
         <div id="mainBox"></div>
