add buttons link_to_instagram and download_btn on observer

--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
         <img class="media">
         <video class="media" controls loop></video>
         <div>
+            <a class="link_to_instagram" target="_blank" title="Открыть в Instagram"></a>
             <div class='fictitious'></div>
             <div class="next" title="Следующий пост"></div>    
             <div class="sidecar_next" title="Следующее медиа"></div>
+            <div class="download_btn" title="Скачать картинку/видео">
+                <div></div>
+            </div>
         </div>
         <div class="close"></div>
         <div class="sidecar_title"></div>
@@ -75,6 +79,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/observer.js"></script>
+    <script src="js/download.js"></script>
 </body>
 
 </html>
