litle change on observer

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
             <div class='fictitious'></div>
             <div class="next" title="Следующий пост"></div>    
             <div class="sidecar_next" title="Следующее медиа"></div>
-            <div class="download_btn" title="Скачать картинку/видео">
-                <div></div>
-            </div>
+            <div class="download_btn" title="Скачать картинку/видео"></div>
         </div>
         <div class="close"></div>
         <div class="sidecar_title"></div>
