--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     <div id="back-top" title="Наверх"></div>
 
+    <script src="js/additional.js"></script>
     <script src="js/main.js"></script>
     <script src="js/observer.js"></script>
     <script src="js/download.js"></script>
