--- a/sherbet2.html
+++ b/sherbet2.html
@@ -14,40 +14,35 @@
     <div class="main">
         <h1>Скрипт Sherbet</h1>
         <i>Ищет публикации Instagram-пользователей за указанный месяц за все годы, например за все феврали.</i>
-        <form id='mainForm'>
-            <p>Найти в Instagram публикации пользователя:</p>
-            <p>
-                <input id="inputUser" type="search" autofocus size="51" placeholder="вставьте username или ссылку на страницу пользователя"></input>
-            </p>
-            <p>За месяц:</p>
-            <p>
-                <select id="month_selector">
-                    <option value="1">январь</option>
-                    <option value="2">февраль</option>
-                    <option value="3">март</option>
-                    <option value="4">апрель</option>
-                    <option value="5">май</option>
-                    <option value="6">июнь</option>
-                    <option value="7">июль</option>
-                    <option value="8">август</option>
-                    <option value="9">сентябрь</option>
-                    <option value="10">октябрь</option>
-                    <option value="11">ноябрь</option>
-                    <option value="12">декабрь</option>
-                </select>
-            </p>
-            <p>
-                <input type="submit" value="Найти"></input>
-            </p>
-        </form>
+        <p>
+            На странице пользователя <strong id="_username"></strong> <span id="countPubAll"></span> публикаций.
+        </p>
+        <p id='mainForm'>
+            Искать все публикации за 
+            <select id="month_selector">
+                <option value="1">январь</option>
+                <option value="2">февраль</option>
+                <option value="3">март</option>
+                <option value="4">апрель</option>
+                <option value="5">май</option>
+                <option value="6">июнь</option>
+                <option value="7">июль</option>
+                <option value="8">август</option>
+                <option value="9">сентябрь</option>
+                <option value="10">октябрь</option>
+                <option value="11">ноябрь</option>
+                <option value="12">декабрь</option>
+            </select>
+            <button>Найти</button>
+        </p>
+        <div id="description">
+            Ищем все <strong id="mountRusPrilog"></strong> публикации.
+            <br>Найдено публикаций: <strong id="_countPub"></strong>.
+        </div>
         <p>
             <button id="refresh_btn">Новый поиск</button>
         </p>
-        <div id="description">
-            На странице пользователя <strong id="_username"></strong> <span id="countPubAll"></span> публикаций.
-            <br>Ищем все <strong id="mountRusPrilog"></strong> публикации.
-            <br>Найдено публикаций: <strong id="_countPub"></strong>.
-        </div>
+        
         <div id="waitingBox"></div>
         <div id="mainBox"></div>
 
@@ -76,7 +71,7 @@
     <div id="back-top" title="Наверх"></div>
 
     <script src="js/additional.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/sherbet2.js"></script>
     <script src="js/requestPosts.js"></script>
     <script src="js/observer.js"></script>
     <script src="js/download.js"></script>
